--- a/src/components/buttons/button.scss
+++ b/src/components/buttons/button.scss
@@ -44,7 +44,14 @@ color: #FFF;
 @include border-radius(8px);
 }
 
+.chat__submit {
+  background: #F38433;
+width: 100px;
+height: 100%;
+color: #FFF;
 
+@include border-radius(3px);
+}
 
 span {
   color: #FFF;
