--- a/src/components/chats/chats.scss
+++ b/src/components/chats/chats.scss
@@ -4,6 +4,8 @@ $blue-color: #3369F3;
 $font: 'Inter';
 $main-text-color: #1E1E1E;
 $hiden-text-color: #999;
+$focus: #fedf953e;
+$selected: #fedf9581;
 
 @mixin border-radius($radius) {
   border-radius: $radius;
@@ -25,6 +27,16 @@ $hiden-text-color: #999;
         justify-content: space-between;
         display: flex;
         align-items: center;
+
+        &:hover {
+          background-color: $focus;
+          border-radius: 5px;
+        }
+        
+        &--selected-chat{
+          border-radius: 5px;
+          background-color: $selected;
+        }
   
       }
   
@@ -34,6 +46,7 @@ $hiden-text-color: #999;
         height: 47px;
         border-radius: 50%;
         margin: auto 10px;
+        background-color: $light;
       }
   
       &__chat-name-prev{
