--- a/src/components/forms/st_chats.scss
+++ b/src/components/forms/st_chats.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     height: max-content;
+    padding: 0;
 
     &__input-container {
       flex: 1
@@ -9,6 +10,8 @@
 
     &__input {
       width: 100%;
+      border: 1px solid;
+      height: 40px; 
 
       &:focus {
         outline: none;
