--- a/static/style.scss
+++ b/static/style.scss
@@ -3,11 +3,20 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+}
+
+a {
+    text-decoration: none; /* no underline */
 }
 
 
 main {
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
   font-family: Inter, sans-serif;
+}
+
+input {
+  all: unset;
+  padding: 0;
 }
